--- a/src/index.css
+++ b/src/index.css
@@ -298,6 +298,11 @@ textarea {
   cursor: text;
 }
 
+.list-item.TASK_ARCHIVED input[type="text"] {
+  color: #4a5568;
+  text-decoration: line-through;
+}
+
 .pin-button {
   width: 3rem;
   height: 3rem;
